examples/test/testpolicy12217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12217
  namespace: namespace361
spec:
  podSelector:
    matchLabels:
      key14: value12
      key2: value16
      key23: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value49
      podSelector:
        matchLabels:
          key21: value46
          key9: value28
